added readme file, some more tests and create ticket option

--- a/tickets/templates/base.html
+++ b/tickets/templates/base.html
@@ -8,6 +8,7 @@
     <div>
       <a>Ticketing</a>
       <div>
+        <a href="{% url 'ticketsapp:create_ticket' %}"> Create ticket</a>
         <a href="{% url 'ticketsapp:index' %}"> Tickets</a>
         
         <a href="/admin/" class="sel">Admin Site</a>
