--- a/tickets/templates/ticketView.html
+++ b/tickets/templates/ticketView.html
@@ -18,7 +18,7 @@
       </tr>
       <tr>
         <td>Description</td>
-        <td>{{ticket.description}}</td>
+        <td>{{ticket.ticket_content}}</td>
       </tr>
       <tr>
         <td>Created At</td>
