--- a/tickets/templates/base.html
+++ b/tickets/templates/base.html
@@ -8,6 +8,11 @@
     <div>
       <a>Ticketing</a>
       <div>
+        {% if user.is_authenticated %}
+        <a href="{% url 'logout' %}">Logout</a>
+        {% else %}
+        <a href="{% url 'login' %}">Login</a>
+        {% endif %}
         <a href="{% url 'ticketsapp:create_ticket' %}"> Create ticket</a>
         <a href="{% url 'ticketsapp:index' %}"> Tickets</a>
         
