--- a/tickets/templates/base.html
+++ b/tickets/templates/base.html
@@ -12,6 +12,7 @@
         <a href="{% url 'logout' %}">Logout</a>
         {% else %}
         <a href="{% url 'login' %}">Login</a>
+        <a href="{% url 'ticketsapp:signup' %}">Sign Up</a>
         {% endif %}
         <a href="{% url 'ticketsapp:create_ticket' %}"> Create ticket</a>
         <a href="{% url 'ticketsapp:index' %}"> Tickets</a>
