--- a/tickets/templates/ticketView.html
+++ b/tickets/templates/ticketView.html
@@ -9,12 +9,20 @@
         <td>{{ticket.title}}</td>
       </tr>
       <tr>
+        <td>Description</td>
+        <td>{{ticket.ticket_content}}</td>
+      </tr>
+      <tr>
         <td>Status</td>
         <td>{{ticket.status}}</td>
       </tr>
       <tr>
         <td>Assignee</td>
         <td>{{ticket.assignee}}</td>
+      </tr>
+      <tr>
+        <td>Created by</td>
+        <td>{{ticket.created_by}}</td>
       </tr>
       <tr>
         <td>Description</td>
