--- a/tickets/templates/home.html
+++ b/tickets/templates/home.html
@@ -1,26 +1,15 @@
 {% extends 'base.html' %}
 {% block title %} Tickets {% endblock %}
 {% block content %}
-<table>
- <thead>
-    <tr>
-      <th>Ticket title</th>
-      <th>Status</th>
-      <th>Assignee</th>
-      <th>Published</th>
-      <th>Last Updated</th>
-    </tr>
-  </thead>
-  <tbody>
-   {% for ticket in tickets %}
-    <tr>
-      <td><a href="{% url 'ticketsapp:ticketView' ticket.id %}">{{ ticket.title }}</a></td>
-      <td>{{ ticket.status }}</td>
-      <td>{{ ticket.assignee }}</td>
-      <td>{{ ticket.publication_date }}</td>
-      <td>{{ ticket.update_date }}</td>
-    </tr>
-    {% endfor %}
-   </tbody>
-  </table>
-  {% endblock %}
+
+{% if user.is_authenticated %}
+<span>
+<a href="{% url 'ticketsapp:create_ticket' %}">Here</a> you can create a new ticket.
+</span>
+{% else %}
+<span>
+To submit tickets, please <a href="{% url 'login' %}">log</a> in or <a href="{% url 'ticketsapp:signup' %}">create a new account</a>
+</span>
+{% endif %}
+
+{% endblock %}
