added the ability for the user to edit their account details

--- a/tickets/templates/base.html
+++ b/tickets/templates/base.html
@@ -36,7 +36,7 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="{% url 'ticketsapp:account_details' %}">Account details</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
                   </div>
