staff now have a redirect to admin site

--- a/tickets/templates/base.html
+++ b/tickets/templates/base.html
@@ -35,7 +35,9 @@
                     Account
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
+                    {% if user.is_staff %}
+                    <a class="dropdown-item" href="/admin" class="btn btn-primary">Admin panel</a>
+                    {% endif %}
                     <a class="dropdown-item" href="{% url 'ticketsapp:account_details' %}">Account details</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
