WIP replies to tickets

--- a/tickets/templates/home.html
+++ b/tickets/templates/home.html
@@ -8,7 +8,7 @@
 </span>
 {% else %}
 <span>
-To submit tickets, please <a href="{% url 'login' %}">log</a> in or <a href="{% url 'ticketsapp:signup' %}">create a new account</a>
+To submit tickets, please <a href="{% url 'login' %}">log in</a> or <a href="{% url 'ticketsapp:signup' %}">create a new account</a>
 </span>
 {% endif %}
 
