--- a/tickets/templates/edit_acc/first_name_update.html
+++ b/tickets/templates/edit_acc/first_name_update.html
@@ -1,8 +1,17 @@
-<h1>Update Email</h1>
+{% extends 'base.html' %}
+{% block title %} Update first name {% endblock %}
+{% block content %}
 
-<p>Current first name: {{ user.first_name }}</p>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Update</button>
-</form>
+<div class="update-account-container">
+  <h1 class="update-account-heading">Update first name:</h1>
+
+  <span class="current-account">Current first name:</span> <span class="current-account-name">{{ user.first_name }}</span>
+
+  <form method="post" class="update-account-form">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="update-button">Update</button>
+  </form>
+</div>
+
+{% endblock %}
