--- a/tickets/templates/edit_acc/password_update.html
+++ b/tickets/templates/edit_acc/password_update.html
@@ -1,7 +1,15 @@
-<h1>Update Password</h1>
+{% extends 'base.html' %}
+{% block title %} Update Password {% endblock %}
+{% block content %}
 
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Update</button>
-</form>
+<div class="update-account-container">
+  <h1 class="update-account-heading">Update Password</h1>
+
+  <form method="post" class="update-account-form">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="update-button">Update</button>
+  </form>
+</div>
+
+{% endblock %}
