--- a/tickets/templates/registration/login.html
+++ b/tickets/templates/registration/login.html
@@ -1,10 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Login</h2>
+<div class="login-page" style="text-align: center;">
   <form method="post">
+    <div class="login-page-container">
+    <h2 class="reply-title">Login:</h2>
     {% csrf_token %}
-    {{ form.as_p }}
+    <div  class="form-group">
+    <span class="font-small">Username:</span> 
+    <p>{{ form.username }}</p>
+    </div>
+
+    <div  class="form-group">
+    <span class="font-small">Password:</span> 
+    <p>{{ form.password }}</p>
+    </div>
     <button type="submit">Login</button>
+    </div>
   </form>
+</div>
 {% endblock %}
