--- a/tickets/templates/registration/logout.html
+++ b/tickets/templates/registration/logout.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Logout</h2>
+<div class="home-page-text" style="text-align: center;">
   <p>You have been logged out.</p>
+</div>
 {% endblock %}
