--- a/tickets/static/tickets/style.css
+++ b/tickets/static/tickets/style.css
@@ -143,6 +143,7 @@ form.signup-form {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  font-weight: 300;
 }
 
 .signup-form-container {
@@ -181,7 +182,8 @@ form.signup-form {
 }
 
 .password-form-group {
-  margin: 8px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .login-page {
