--- a/tickets/static/tickets/style.css
+++ b/tickets/static/tickets/style.css
@@ -102,6 +102,7 @@ input[type="text"], textarea {
 }
 
 .create-ticket-container{
+  padding-top: 20px;
   width: 70%;
   margin: 0 auto;
 }
@@ -114,14 +115,14 @@ input[type="text"], textarea {
 
 
 .form-group {
-  font-weight: 300px;
+  font-weight: 300;
   font-size: 16px;
   margin-bottom: 20px;
 }
 
 .title {
-  font-weight: 700px;
-  font-size: 45px;
+  font-weight: 700;
+  font-size: 4px;
   line-height: 55px;
 }
 
